docs(89): replan phase 89 after FLAKE-DIAGNOSTIC — 3 plans (revision 2)
Replans Phase 89 from scratch after Plan 89-01 attempt 1 was reverted on
2026-05-19 due to four empirical findings documented in 89-FLAKE-DIAGNOSTIC.md.

Plans replaced (all three deleted + regenerated):
- 89-01-perf-01-per-fork-staging-refactor-PLAN.md — 5 tasks (was 4, D-19
  lock-timeout task NEW): pom.xml THREE <systemPropertyVariables> per plugin
  (staging-dir + import-backups-dir + surefire.forkNumber, no project-property
  fallback per D-04R), BackupStagingDirPerForkIT (non-vacuous Test 2 via
  D-04R.2), BackupStagingCleanupRaceIT, ImportLockedPostRejectorIT lock-timeout
  root-cause investigation, 3-seed verification + legacy dir rm.
- 89-02-perf-02-fingerprint-listener-aggregator-PLAN.md — 5 tasks:
  ContextLoadCountListener marker-format extension, new
  ContextCacheKeyFingerprintListener + spring.factories, combined cross-check,
  aggregate-fingerprints.sh, docs § PERF-02 Forensics.
- 89-03-wave-4-measurement-docs-PLAN.md — 4 tasks: Wave-4 measurement
  (checkpoint:human-verify, 3 idle-protocol runs), docs § Wave 4 + Lever-1 DONE,
  README § Test Performance, final gate (JaCoCo ≥ 88.88 %, SpotBugs 0).

Plan-checker verdict: VERIFICATION PASSED (0 blockers, 2 warnings, 1 info).

Companion fixes:
- 89-CONTEXT.md: D-18 arithmetic typo "FOUR entries per plugin" → "THREE"
  (3 per plugin × 2 plugins = 6 total <systemPropertyVariables> lines).
- 89-VALIDATION.md: per-task verification map refreshed to match new 5-task
  Plan 89-01 + D-19 lock-timeout coverage; Wave 0 reference to superseded
  D-04 <surefire.forkNumber>0</surefire.forkNumber> fallback removed.
- STATE.md: phase 89 status → Ready to execute (3 plans).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>